--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0B4943" />
-    <meta name="msapplication-TileColor" content="#0B4943" />
-    <meta name="theme-color" content="#0B4943" />
-    <meta name="description" content="AP Education Center" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&amp;display=swap"
-      rel="stylesheet"
-    />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff6c24" />
+    <meta name="apple-mobile-web-app-title" content="Hot Dog Grooming" />
+    <meta name="application-name" content="Hot Dog Grooming" />
+    <meta name="msapplication-TileColor" content="#ff6c24" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="Hot Dog Grooming" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AP Education Center</title>
+    <title>Hot Dog Grooming</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
@@ -61,7 +57,7 @@
     <!-- End Single Page Apps for GitHub Pages -->
     <script
       id="react-dotenv"
-      src="https://PaulHighrow.github.io/aggregator//env.js"
+      src="https://PaulHighrow.github.io/hotdog//env.js"
     ></script>
   </head>
   <body>
